# STEAM-Garden

./: .gitignore  .pre-commit-config.yaml  2020-Mathematics.md  2021-Mathematics.md  2022-Mathematics.md  Abbott-Understanding_Analysis-Section-1.2-Exercises.md  Abbott-Understanding_Analysis-Section-1.3-Exercises.md  Axler-Linear_Algebra_Done_Right-Exercises-1.A.md  Axler-Linear_Algebra_Done_Right-Exercises-1.C.md  Axler-Linear_Algebra_Done_Right-Exercises-2.A.md  Axler-Linear_Algebra_Done_Right-Exercises-2.B.md  Axler-Linear_Algebra_Done_Right-Exercises-2.C.md  Axler-Linear_Algebra_Done_Right-Exercises-3.A.md  Axler-Linear_Algebra_Done_Right-Exercises-3.B.md  Axler-Understanding_Analysis-Section-1.2-Exercises.md  Linear-Algebra-Notebook.md  Macdonald-Linear_and_Geometric_Algebra-Chapter_4-Exercises.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_4-Problems-4.1.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.1-Exercises.md  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.1-Problems.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.1-Problems.md  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.2-Exercises.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.2-Problems.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.2-Problems.md  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.3-Exercises.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.3-Exercises.md  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.3-Problems.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.4-Exercises.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.4-Exercises.md  Macdonald-Linear_and_Geometric_Algebra-Chapter_4.4-Problems.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_5.1-Exercises.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_5.1-Exercises.md  Macdonald-Linear_and_Geometric_Algebra-Chapter_5.1-Problems.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_5.2-Exercises.markdown  Macdonald-Linear_and_Geometric_Algebra-Chapter_5.2-Problems.markdown  (+10 more)
(+144 files in other folders)
