[tool.poetry]
name = "STEAM Garden"
version = "0.0.0"
description = ""
license = "CC-BY-4.0 license"
readme = "README.md"
authors = ["Kevin T. Chu <kevin@velexi.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
black = "^22.10.0"
flake8 = "<5.0.0"  # Unpin after compatibility with pytest-flake8 is fixed
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
